--- a/packages/lexical-playground/package.json
+++ b/packages/lexical-playground/package.json
@@ -31,6 +31,8 @@
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "lodash": "^4.17.21",
+    "firebase": "^9.22.1",
     "react-error-boundary": "^3.1.4",
     "y-websocket": ">=1.3.x",
     "yjs": ">=13.5.42"
