--- a/packages/lexical-playground/package.json
+++ b/packages/lexical-playground/package.json
@@ -25,15 +25,16 @@
     "@lexical/selection": "0.11.1",
     "@lexical/table": "0.11.1",
     "@lexical/utils": "0.11.1",
+    "firebase": "^9.22.1",
     "katex": "^0.15.2",
     "lexical": "0.11.1",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lodash": "^4.17.21",
-    "firebase": "^9.22.1",
     "react-error-boundary": "^3.1.4",
+    "react-router-dom": "^6.11.2",
     "y-websocket": ">=1.3.x",
     "yjs": ">=13.5.42"
   },
